# uk-policy-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_expand_govuk_content_id_length.py  002_user_topic_ownership.py  003_expand_organisation_acronym.py  004_merge_legacy_local.py  005_topic_scoped_parliament_links.py  006_question_answers.py  007_topic_keyword_rules.py  008_mp_tracking.py  009_association_provenance.py  010_content_item_organisation_uniqueness.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  bronze.py  gold.py  silver.py
backend/app/nlp/: extractor.py
backend/app/routers/: entities.py  health.py  members.py  topics.py
backend/app/schemas/: entities.py  members.py  timeline.py  topics.py
backend/app/services/: division_title_parser.py  govuk.py  graph.py  ingest.py  matching.py  member_refresh.py  parliament.py  refresh.py  topic_rules.py
backend/app/tasks/: celery_app.py  ingest.py  pipeline.py
backend/tests/: conftest.py  test_auth.py  test_clients.py  test_extractor.py  test_graph.py  test_ingest.py  test_routers.py  test_schemas.py  test_tasks.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: ActorList.tsx  ConnectionList.tsx  Timeline.tsx  TimelineFilters.tsx  TopicCard.tsx
frontend/src/hooks/: useAuth.ts  (+4 more)
(+17 files in other folders)
